addind spec. more clearly

--- a/cascade-specificity-ex/css-exercise.html
+++ b/cascade-specificity-ex/css-exercise.html
@@ -7,7 +7,9 @@
   <title>CSS Exercises</title>
 </head>
 <body>
-  <h1 class="main-header">CSS exercises</h1>
+  <header>
+    <h1 class="main-header">CSS exercises</h1>
+  </header>
   <ul>
     <li>Apple</li>
     <li>Orange</li>
